--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,221 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
+:root{
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --main-black: #222;
+  --main-red: #E90506;
+  --main-white: #f5f5f5;
+  --main-grey: #d9d9d9;
 
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
+  --secondary-red: #F22952;
+  --secondary-white: #FFF;
+  --gradient: linear-gradient(to right, var(--main-red), var(--secondary-red));
+  --secondary-gradient: linear-gradient(var(--main-black), var(--main-white));
 
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
 
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+  --title: 50px;
+  --subtitle: 35px;
+  --paragraph: 16px;
+
+  --section-padding: 1rem 1.25rem;
+  --border-rad: 5px;
+
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
+*{
   padding: 0;
   margin: 0;
+  text-decoration: 0;
+  list-style: none;
+  scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+
+/* components */
+.button-01{
+  padding: 0.75rem 1.5rem;
+  background: var(--gradient);
+  border-radius: var(--border-rad);
+  color: var(--main-white);
+  cursor: pointer;
+}
+.button-01:hover{
+  background: var(--main-white);
+  color: var(--main-red);
+  transition: ease-in-out;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+/* landing page */
+
+
+
+/* Home */
+.hero{
+  width: 100%;
+  height: 100svh;
+  background: var(--secondary-gradient);
+  position: relative;
+  overflow: hidden;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.hero h1{
+  z-index: 5;
+  color: var(--main-grey);
+  
+}
+.navbar{
+  width: 80%;
+  height: 75px;
+  position: absolute;
+  top: 20px;
+  left: 0;
+  right: 0;
+  margin-inline: auto;
+  z-index: 2;
+
+  padding: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar span{
+  display: flex;
+  width: 70%;
+}
+.navbar nav{
+  width: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+}
+.menuLink{
+  color: var(--main-white);
+  font-weight: 300;
+}
+.menuLink:hover{
+  color: var(--main-red);
+  transition: ease-in-out 0.25s;
+}
+.heroImage{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  bottom: -95px;
+}
+.punchingBag{
+  width: 150px;
+  height: 40%;
+  position: absolute;
+  z-index: 4;
+  top: 75px;
+  left: 67.5%;
+  transform-origin: top center; 
+  animation: swing 4s infinite ease-in-out;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.about{
+  height: 100svh;
+  background-color: var(--main-white);
+  position: relative;
+
+  padding-top: 6rem;
+  padding-right: 10rem;
+  display: flex;
+  align-items: flex-start;
+  justify-content: flex-end;
+}
+.about::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 60%;
+  height: 100%;
+  background: linear-gradient(to top right, #F22952 50%, transparent 50%);
+  z-index: 1;
+}
+.boxer{
+  position: absolute;
+  z-index: 10;
+  width: 50%;
+  height: 95%;
+  bottom: 0;
+  left: 0;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+.aboutInfo{
+  z-index: 10;
+  width: 50%;
+  text-align: center;
+}
+.aboutInfo h2{
+  color: var(--secondary-red);
+  font-size: 3.5rem;
+  margin-bottom: 1rem;
+}
+.aboutInfo h4{
+  color: var(--main-black);
+  font-size: 2.25rem;
+  font-weight: 300;
+  margin-bottom: 2rem;
+}
+.aboutInfo p{
+  width: 65%;
+  margin: auto;
+  line-height: 2;
+  color: var(--main-black);
+  font-weight: 300;
+  margin-bottom: 2rem;
+}
+
+.training{
+  height: 100svh;
+  position: relative;
+  background-color: var(--main-white);
+  padding: 4.5rem;
+
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 2rem;
+}
+.gloves{
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin-inline: auto;
+
+  width: 80%;
+  height: 80%;
+  opacity: 35%;
+}
+.serviceItem{
+  background-color: var(--secondary-white);
+  padding: 1.5rem;
+  z-index: 2;
+  text-align: center;
+  border-radius: var(--border-rad);
+  opacity: 85%;
+}
+.serviceItem h4{
+  font-size: 1.75rem;
+  color: var(--main-red);
+  margin-bottom: 1rem;
+}
+.serviceItem p{
+  font-size: 1.25rem;
+  font-weight: 300;
+  line-height: 2;
+}
+
+/* animations */
+@keyframes swing {
+  0%, 100% {
+      transform: rotate(-5deg);
+  }
+  50% {
+      transform: rotate(5deg);
   }
 }
