--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 :root{
 
   --main-black: #222;
@@ -11,6 +13,7 @@
   --secondary-gradient: linear-gradient(var(--main-black), var(--main-white));
 
 
+  --body-style:'Rubik', sans-serif;
   --title: 65px;
   --subtitle: 35px;
   --paragraph: 16px;
@@ -36,6 +39,7 @@
   border-radius: var(--border-rad);
   color: var(--main-white);
   cursor: pointer;
+  font-family: var(--body-style);
 }
 .button-02{
   padding: 0.75rem 1.5rem;
@@ -59,7 +63,7 @@
 /* landing page */
 .landing{
   height: 100svh;
-  background-color: #222;
+  background-color: var(--main-white);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -81,7 +85,10 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 2.5rem;
+}
+.enterBox a{
+  padding: 0.75rem 2.75rem;
 }
 
 
@@ -130,6 +137,8 @@
 .menuLink{
   color: var(--main-white);
   font-weight: 300;
+  font-family: var(--body-style);
+  font-weight: 500;
 }
 .menuLink:hover{
   color: var(--main-red);
@@ -200,12 +209,15 @@
   margin-bottom: 2rem;
 }
 .aboutInfo p{
+  font-size: 14px;
   width: 95%;
   margin: auto;
   line-height: 2;
   color: var(--main-black);
   font-weight: 300;
   margin-bottom: 2rem;
+  font-family: var(--body-style);
+  font-weight: 500;
 }
 
 
@@ -233,7 +245,7 @@
 }
 .serviceItem{
   background-color: var(--secondary-white);
-  padding: 1.5rem;
+  padding: 1.25rem;
   z-index: 2;
   text-align: center;
   border-radius: var(--border-rad);
@@ -245,6 +257,8 @@
   margin-bottom: 1rem;
 }
 .serviceItem p{
+  font-family: var(--body-style);
+  font-weight: 500;
   font-size: 1.15rem;
   font-weight: 300;
   line-height: 2;
@@ -369,6 +383,8 @@
   line-height: 2;
   text-align: center;
   color: var(--main-white);
+  font-family: var(--body-style);
+  font-weight: 500;
 }
 .register a{
   display: inline-block;
@@ -484,7 +500,8 @@
       }
       .aboutInfo p{
         width: 95%;
-        font-size: 0.95rem;
+        font-size: 0.75rem;
+        line-height: 2.25;
         z-index: 10;
       }
 
@@ -548,5 +565,10 @@
       }
       .register p{
         width: 90%;
+      }
+
+      .enterBox img{
+        width: 400px;
+        height: 275px;
       }
 }
