--- a/app/globals.css
+++ b/app/globals.css
@@ -7,7 +7,7 @@
   --main-white: #f5f5f5;
   --main-grey: #d9d9d9;
 
-  --secondary-red: #F22952;
+  --secondary-red: red;
   --secondary-white: #FFF;
   --gradient: linear-gradient(to right, var(--main-red), var(--secondary-red));
   --secondary-gradient: linear-gradient(var(--main-black), var(--main-white));
@@ -189,7 +189,7 @@
   z-index: 10;
   width: 50%;
   height: 95svh;
-  bottom: -50px;
+  bottom:  0;
   left: -35px;
 }
 .aboutInfo{
@@ -203,12 +203,11 @@
   margin-bottom: 1rem;
 }
 .aboutInfo p{
-  font-size: 12px;
+  font-size: 13px;
   width: 95%;
   margin: auto;
   line-height: 2;
   color: var(--main-black);
-  font-weight: 300;
   margin-bottom: 2rem;
   font-family: var(--body-style);
   font-weight: 500;
@@ -325,6 +324,11 @@
   gap: 0.5rem;
   color: var(--main-black);
 }
+#firstchild p{
+  font-size:  var(--paragraph);
+  font-family: var(--body-style);
+  font-weight: 700;
+}
 #secondchild{
   text-align: right !important;
   display: flex;
@@ -333,6 +337,11 @@
   justify-content: center;
   gap: 0.5rem;
   color: var(--main-black);
+}
+#secondchild p{
+  font-size:  var(--paragraph);
+  font-family: var(--body-style);
+  font-weight: 700;
 }
 
 /* animations */
@@ -418,19 +427,20 @@
 .creators small{
   display: block;
   text-align: center;
-  color: var(--main-white);
+  color: var(--main-black);
   margin-bottom: 1rem;
 }
 
 .authorLink{
   font-family: var(--body-style);
+  font-weight: 600;
   color: #F22952;
   margin-inline: 1rem;
-  border-bottom: solid 1px var(--secondary-red);
+  text-decoration: underline;
 }
 .authorLink:hover{
   color: #f5f5f5;
-  border-bottom: solid 1px var(--main-white);
+  border-bottom: solid 1px var(--main-black);
   transition: 0.25s ease-in-out;
 }
 
@@ -464,7 +474,7 @@
       }
 
       .about{
-        height: 130svh;
+        min-height: 125svh;
         background-color: var(--main-white);
         position: relative;
       
@@ -491,12 +501,12 @@
         width: 90%;
       }
       .aboutInfo h2{
-        font-size: 2.5rem;
+        font-size: 1.75rem;
       }
       .aboutInfo p{
-        width: 95%;
+        width: 98%;
         font-size: 0.75rem;
-        line-height: 2.25;
+        line-height: 2;
         z-index: 10;
       }
 
